@@ -10,11 +10,11 @@ describe Server do
       body << env['rack.input'].read
       [200, { 'Content-Type' => 'text/html', 'Content-Length' => body.size.to_s }, body]
     end
-    server = Thin::Server.new('0.0.0.0', 3333, app)
-    server.timeout = 3
-    server.silent = true
+    @server = Thin::Server.new('0.0.0.0', 3333, app)
+    @server.timeout = 3
+    @server.silent = true
     
-    @thread = Thread.new { server.start }
+    @thread = Thread.new { @server.start }
     sleep 0.1 until @thread.status == 'sleep'
   end
     
@@ -23,18 +23,18 @@ describe Server do
   end
   
   it 'should GET from TCPSocket' do
-    raw('0.0.0.0', 3333, "GET /?this HTTP/1.1\r\n\r\n").
+    raw("GET /?this HTTP/1.1\r\n\r\n").
       should include("HTTP/1.1 200 OK",
                      "Content-Type: text/html", "Content-Length: ",
                      "Connection: close", "this")
   end
   
   it 'should return empty string on incomplete headers' do
-    raw('0.0.0.0', 3333, "GET /?this HTTP/1.1\r\nHost:").should be_empty
+    raw("GET /?this HTTP/1.1\r\nHost:").should be_empty
   end
   
   it 'should return empty string on incorrect Content-Length' do
-    raw('0.0.0.0', 3333, "POST / HTTP/1.1\r\nContent-Length: 300\r\n\r\naye").should be_empty
+    raw("POST / HTTP/1.1\r\nContent-Length: 300\r\n\r\naye").should be_empty
   end
   
   it 'should POST from Net::HTTP' do
@@ -58,7 +58,40 @@ describe Server do
     get('/').should include('"REMOTE_ADDR"=>"127.0.0.1"')
   end
   
+  it "should wait for current requests before soft stopping" do
+    socket = TCPSocket.new('0.0.0.0', 3333)
+    socket.write("GET / HTTP/1.1")
+    @server.stop # Stop the server in the middle of a request
+    socket.write("\r\n\r\n")
+    
+    out = socket.read
+    socket.close
+    
+    out.should_not be_empty
+  end
+  
+  it "should not accept new requests when soft stopping" do
+    socket = TCPSocket.new('0.0.0.0', 3333)
+    socket.write("GET / HTTP/1.1")
+    @server.stop # Stop the server in the middle of a request
+    
+    EventMachine.next_tick do
+      proc { get('/') }.should raise_error(Errno::ECONNRESET)
+    end
+    
+    socket.close
+  end
+  
+  it "should drop current requests when hard stopping" do
+    socket = TCPSocket.new('0.0.0.0', 3333)
+    socket.write("GET / HTTP/1.1")
+    @server.stop! # Force stop the server in the middle of a request
+    
+    EventMachine.next_tick { socket.should be_closed }
+  end
+  
   after do
+    @server.stop!
     @thread.kill
   end
   
@@ -67,8 +100,8 @@ describe Server do
       Net::HTTP.get(URI.parse('http://0.0.0.0:3333' + url))
     end
     
-    def raw(host, port, data)
-      socket = TCPSocket.new(host, port)
+    def raw(data)
+      socket = TCPSocket.new('0.0.0.0', 3333)
       socket.write data
       out = socket.read
       socket.close
@@ -143,11 +176,12 @@ describe Server, "on UNIX domain socket" do
   end
   
   it "should remove socket file after server stops" do
-    @server.stop
+    @server.stop!
     File.exist?('/tmp/thin_test.sock').should be_false
   end
   
   after do
+    @server.stop!
     @thread.kill
   end
   
